vzense-sys/vzense/include/Vzense_api_560.h

/**
* @brief 		Starts capturing the image stream indicated by <code>device</code>. \n
Invoke Ps2_StopStream() to stop capturing the image stream.
* @param[in] 	device			The handle of the device on which to start capturing the image stream.
* @param[in] 	sessionIndex	The index of the session that include N Tof sensors and maximum N RGB sensors. \n
								range from 0 to ::SessionCount - 1. See ::PsDeviceInfo for more information. \n
								For example, the camera <code>device</code> has 2 Tof sensor and 1 rgb sensor, the ::SessionCount is 2.\n
								If the <code>sessionIndex</code> is 0 mean that start 1 tof stream and the rgb stream, \n
								and if the <code>sessionIndex</code> is 1 mean that start only 1 tof stream.						
* @return 	    ::PsRetOK if	the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_StartStream(PsDeviceHandle device, uint32_t sessionIndex);
/**
* @brief 		Stops capturing the image stream on the device specified by <code>device</code>. that was started using Ps2_StartStream.
* @param[in] 	device			The handle of the device on which to stop capturing the image stream.
* @param[in] 	sessionIndex	The index of the session that include N Tof sensors and maximum N RGB sensors. \n
								range from 0 to ::SessionCount - 1. See ::PsDeviceInfo for more information. \n
								For example, the camera <code>device</code> has 2 Tof sensor and 1 rgb sensor, the ::SessionCount is 2.\n
								If the <code>sessionIndex</code> is 0 mean that stop 1 tof stream and the rgb stream, \n
								and if the <code>sessionIndex</code> is 1 mean that stop only 1 tof stream.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_StopStream(PsDeviceHandle device, uint32_t sessionIndex);
/**
* @brief		Enables or disables the syncronize feature.
* @param[in]	device			The handle of the device on which to enable or disable the feature.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in]	bEnabled		Set to <code>true</code> to enable the feature or <code>false</code> to disable the feature.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetSynchronizeEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool bEnabled);
/**
* @brief 		Returns the Boolean value of whether the syncronize feature is enabled or disabled.
* @param[in]	device			The handle of the device on which to enable or disable the feature.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[out]	bEnabled		Pointer to a variable in which to store the returned Boolean value.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetSynchronizeEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool *bEnabled);
/**
* @brief 		Enables or disables the depth and ir distortion correction feature.
* @param[in]	device			The handle of the device on which to enable or disable the feature.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	bEnabled		Set to <code>true</code> to enable the feature or <code>false</code> to disable the feature.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetDepthDistortionCorrectionEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool bEnabled);
/**
* @brief 		Returns the Boolean value of whether the depth and ir distortion correction feature is enabled or disabled.
* @param[in]	device			The handle of the device on which to enable or disable the feature.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[out]	bEnabled		Pointer to a variable in which to store the returned Boolean value.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetDepthDistortionCorrectionEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool *bEnabled);
/*
Removed: merge the function to Ps2_SetDepthDistortionCorrectionEnabled,
If recover the API 'XX_IrDistortionXXX', stil call the 'XX_DepthDistortionXXX'
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetIrDistortionCorrectionEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool bEnabled);
*/

/*
Removed: merge the function to Ps2_GetDepthDistortionCorrectionEnabled
If recover the API 'XX_IrDistortionXXX', stil call the 'XX_DepthDistortionXXX'
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetIrDistortionCorrectionEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool *bEnabled);
*/

/**
* @brief 		Enables or disables the RGB distortion correction feature.
* @param[in]	device			The handle of the device on which to enable or disable the feature. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in] 	bEnabled		Set to <code>true</code> to enable the feature or <code>false</code> to disable the feature.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetRGBDistortionCorrectionEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool bEnabled);
/**
* @brief 		Returns the Boolean value of whether the RGB distortion correction feature is enabled or disabled.
* @param[in]	device			The handle of the device on which to enable or disable the feature. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[out]	bEnabled		Pointer to a variable in which to store the returned Boolean value.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetRGBDistortionCorrectionEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool *bEnabled);
/**
* @brief		Enables or disables the ComputeRealDepth feature.
* @param[in]	device			The handle of the device on which to enable or disable the feature. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in]	bEnabled		Set to <code>true</code> to enable the feature or <code>false</code> to disable the feature.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetComputeRealDepthCorrectionEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool bEnabled);
/**
* @brief 		Returns the Boolean value of whether the ComputeRealDepth feature is enabled or disabled.
* @param[in]	device			The handle of the device on which to enable or disable the feature. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[out]	bEnabled		Pointer to a variable in which to store the returned Boolean value.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetComputeRealDepthCorrectionEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool *bEnabled);
/**
* @brief		Enables or disables the SpatialFilter feature.
* @param[in]	device			The handle of the device on which to enable or disable the feature. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in]	bEnabled		Set to <code>true</code> to enable the feature or <code>false</code> to disable the feature.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetSpatialFilterEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool bEnabled);
/**
* @brief 		Returns the Boolean value of whether the SpatialFilter feature is enabled or disabled.
* @param[in]	device			The handle of the device on which to enable or disable the feature. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[out]	bEnabled		Pointer to a variable in which to store the returned Boolean value.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetSpatialFilterEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool *bEnabled);
/**
* @brief		Enables or disables the TimeFilter feature.
* @param[in]	device			The handle of the device on which to enable or disable the feature. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in]	bEnabled		Set to <code>true</code> to enable the feature or <code>false</code> to disable the feature.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/ 
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetTimeFilterEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool bEnabled);
/**
* @brief 		Returns the Boolean value of whether the TimeFilter feature is enabled or disabled.
* @param[in]	device			The handle of the device on which to enable or disable the feature. 
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[out]	bEnabled		Pointer to a variable in which to store the returned Boolean value.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_GetTimeFilterEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool *bEnabled);
/**
* @brief		Enables or disables the Depth Stream feature.
* @param[in]	device			The handle of the device on which to enable or disable the feature.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in]	bEnabled		Set to <code>true</code> to enable the feature or <code>false</code> to disable the feature.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetDepthFrameEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool bEnabled);
/**
* @brief		Enables or disables the IR Stream feature.
* @param[in]	device			The handle of the device on which to enable or disable the feature.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in]	bEnabled		Set to <code>true</code> to enable the feature or <code>false</code> to disable the feature.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetIrFrameEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool bEnabled);
/**
* @brief		Enables or disables the RGB Stream feature.
* @param[in]	device			The handle of the device on which to enable or disable the feature.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in]	bEnabled		Set to <code>true</code> to enable the feature or <code>false</code> to disable the feature.
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetRgbFrameEnabled(PsDeviceHandle device, uint32_t sessionIndex, bool bEnabled);
/**
* @brief		Sets the ImageMirror feature.
* @param[in]	device			The handle of the device on which to enable or disable the feature.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in]	type			1 left-right mirror; 2 up-down mirror;3 both mirror (rotation 180)
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetImageMirror(PsDeviceHandle device, uint32_t sessionIndex, int32_t type);
/**
* @brief		Sets the ImageRotation feature.
* @param[in]	device			The handle of the device on which to enable or disable the feature.
* @param[in] 	sessionIndex	The index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.
* @param[in]	type			0 counterclock 906у; 1 counterclock 1806у;2 counterclock 2706у
* @return 		::PsRetOK		if the function succeeded, or one of the error values defined by ::PsReturnStatus.
*/
VZENSE_C_API_EXPORT PsReturnStatus Ps2_SetImageRotation(PsDeviceHandle device, uint32_t sessionIndex, int32_t type);