vzense-sys/bindings/dcam560.rs

unsafe extern "C" {
    #[doc = " @brief\t\tEnables or disables the syncronize feature.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in]\tbEnabled\t\tSet to <code>true</code> to enable the feature or <code>false</code> to disable the feature.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_SetSynchronizeEnabled(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tReturns the Boolean value of whether the syncronize feature is enabled or disabled.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[out]\tbEnabled\t\tPointer to a variable in which to store the returned Boolean value.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_GetSynchronizeEnabled(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: *mut u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tEnables or disables the depth and ir distortion correction feature.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in] \tbEnabled\t\tSet to <code>true</code> to enable the feature or <code>false</code> to disable the feature.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_SetDepthDistortionCorrectionEnabled(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tReturns the Boolean value of whether the depth and ir distortion correction feature is enabled or disabled.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[out]\tbEnabled\t\tPointer to a variable in which to store the returned Boolean value.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_GetDepthDistortionCorrectionEnabled(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: *mut u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tEnables or disables the RGB distortion correction feature.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in] \tbEnabled\t\tSet to <code>true</code> to enable the feature or <code>false</code> to disable the feature.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_SetRGBDistortionCorrectionEnabled(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tReturns the Boolean value of whether the RGB distortion correction feature is enabled or disabled.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[out]\tbEnabled\t\tPointer to a variable in which to store the returned Boolean value.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_GetRGBDistortionCorrectionEnabled(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: *mut u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief\t\tEnables or disables the ComputeRealDepth feature.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in]\tbEnabled\t\tSet to <code>true</code> to enable the feature or <code>false</code> to disable the feature.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_SetComputeRealDepthCorrectionEnabled(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tReturns the Boolean value of whether the ComputeRealDepth feature is enabled or disabled.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[out]\tbEnabled\t\tPointer to a variable in which to store the returned Boolean value.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_GetComputeRealDepthCorrectionEnabled(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: *mut u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief\t\tEnables or disables the SpatialFilter feature.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in]\tbEnabled\t\tSet to <code>true</code> to enable the feature or <code>false</code> to disable the feature.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_SetSpatialFilterEnabled(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tReturns the Boolean value of whether the SpatialFilter feature is enabled or disabled.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[out]\tbEnabled\t\tPointer to a variable in which to store the returned Boolean value.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_GetSpatialFilterEnabled(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: *mut u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief\t\tEnables or disables the TimeFilter feature.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in]\tbEnabled\t\tSet to <code>true</code> to enable the feature or <code>false</code> to disable the feature.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_SetTimeFilterEnabled(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief \t\tReturns the Boolean value of whether the TimeFilter feature is enabled or disabled.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[out]\tbEnabled\t\tPointer to a variable in which to store the returned Boolean value.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_GetTimeFilterEnabled(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: *mut u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief\t\tEnables or disables the Depth Stream feature.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in]\tbEnabled\t\tSet to <code>true</code> to enable the feature or <code>false</code> to disable the feature.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_SetDepthFrameEnabled(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief\t\tEnables or disables the IR Stream feature.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in]\tbEnabled\t\tSet to <code>true</code> to enable the feature or <code>false</code> to disable the feature.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_SetIrFrameEnabled(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief\t\tEnables or disables the RGB Stream feature.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in]\tbEnabled\t\tSet to <code>true</code> to enable the feature or <code>false</code> to disable the feature.\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_SetRgbFrameEnabled(
        device: PsDeviceHandle,
        sessionIndex: u32,
        bEnabled: u8,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief\t\tSets the ImageMirror feature.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in]\ttype\t\t\t1 left-right mirror; 2 up-down mirror;3 both mirror (rotation 180)\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_SetImageMirror(
        device: PsDeviceHandle,
        sessionIndex: u32,
        type_: i32,
    ) -> PsReturnStatus;
}
unsafe extern "C" {
    #[doc = " @brief\t\tSets the ImageRotation feature.\n @param[in]\tdevice\t\t\tThe handle of the device on which to enable or disable the feature.\n @param[in] \tsessionIndex\tThe index of the session. See ::Ps2_StartStream() & ::Ps2_StopStream() api for more information.\n @param[in]\ttype\t\t\t0 counterclock 906у; 1 counterclock 1806у;2 counterclock 2706у\n @return \t\t::PsRetOK\t\tif the function succeeded, or one of the error values defined by ::PsReturnStatus."]
    pub fn Ps2_SetImageRotation(
        device: PsDeviceHandle,
        sessionIndex: u32,
        type_: i32,
    ) -> PsReturnStatus;
}
